testsuite/tests/ghc-regress/gadt/gadt10.stderr

gadt10.hs:6:23:
    Kind error: `RInt' is not applied to enough type arguments
    In the data type declaration for `RInt'
