testsuite/tests/ghc-regress/gadt/gadt10.hs
{-# OPTIONS -fglasgow-exts #-}

module ShouldFail where

-- Kind error
data RInt a where R :: RInt
